# b81_6

./: CMakeLists.txt
include/: textgen.cpp  textgen.h
result/: gen.txt
src/: main.cpp  textgen.cpp
test/: AllTests.cpp  CMakeLists.txt  tests.cpp
